# kabu_hft_new

./: .gitignore  CLAUDE.md  README.md  config.json  main.py  pyproject.toml  trades.csv  trades.markout.csv
docs/: DESIGN.md  RUNBOOK.md  TEST_PLAN.md
kabu_hft/: __init__.py  app.py  clock.py  config.py  instrument.py  journal.py
kabu_hft/adapter/: __init__.py  normalizer.py
kabu_hft/core/: __init__.py  market_state.py  pricer.py  strategy.py
kabu_hft/execution/: __init__.py  engine.py
kabu_hft/gateway/: __init__.py  kabu_gateway.py
kabu_hft/market/: __init__.py  book_state.py  orderbook.py
kabu_hft/oms/: __init__.py  orders.py  positions.py  reconciliation.py
kabu_hft/replay/: __init__.py  fill_model.py  loader.py  metrics.py  recorder.py  runner.py
kabu_hft/risk/: __init__.py  guard.py
kabu_hft/signals/: __init__.py  market_state.py  microstructure.py
kabu_hft/telemetry/: __init__.py  latency_report.py
tests/: __init__.py  test_app.py  test_execution.py  test_gateway.py  test_journal.py  test_latency_report.py  test_market_regime.py  test_market_state.py  test_normalizer.py  test_oms.py  test_replay.py  test_risk.py  test_signals.py  test_strategy_adaptive.py
tests/unit/: test_market_state.py  test_normalizer.py  test_pricer.py  test_risk_limits.py  test_signals_unit.py
