[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kabu-hft"
version = "0.1.0"
description = "Self-built kabu station microstructure trading scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9,<4",
  "websockets>=12,<16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kabu_hft*"]
